# poetry_project

./: .gitignore  README.md  genindex.html  modules.html  objects.inv  poetry_project.html  pyproject.toml  searchindex.js  tests.html
.github/: test_on_push.yml
.github/workflows/: docs_pages.yml  test_on_push.yml
_sources/: index.rst.txt  modules.rst.txt  tests.rst.txt
docs/: conf.py  poetry_project.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  poetry_project.doctree  tests.doctree
docs/_build/html/: .buildinfo  index.html  modules.html  objects.inv  poetry_project.html  py-modindex.html  search.html  searchindex.js  tests.html
poetry_project/: flatten_list.py  frequency_sort.py  non_unique_elements.py
tests/: test_flatten_list.py  test_frequency_sort.py  test_non_unique_elements.py
