[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["LucasSLD <lucassld700@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
coverage = "^7.3.2"
pylint = "^3.0.1"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]