[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["LucasSLD <lucassld700@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.2"
pylint = "^3.0.1"
black = "^23.9.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = ">=5.3"
sphinx-rtd-theme = ">=1.1"
sphinx-copybutton = ">=0.7"
attrs = ">=22"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"